--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
     <string name="alert_delete_user">Delete this user?</string>
     <string name="alert_logout">Do you want to log out?</string>
     <string name="pref_app_title">APP SETTINGS</string>
-    <string name="pref_app_default_box">Default box</string>
-    <string name="pref_app_pull_interval_active">Interval active</string>
-    <string name="pref_app_pull_interval_paused">Interval inactive</string>
+    <string name="pref_app_default_box">Default Box</string>
+    <string name="pref_app_pull_interval_active">Interval Active</string>
+    <string name="pref_app_pull_interval_paused">Interval Inactive</string>
     <string name="pref_api_title">API SETTINGS</string>
-    <string name="pref_api_server_address">Pssst server</string>
+    <string name="pref_api_server_address">Pssst Server</string>
     <string name="password_warning">Please remember your password, because we won\'t.</string>
 </resources>
