--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Pssst</string>
     <string name="action_settings">Settings</string>
     <string name="action_write">Write Message</string>
-    <string name="action_delete_user">Delete User</string>
+    <string name="action_delete_user">Delete Account</string>
     <string name="action_logout">Logout</string>
     <string name="button_create">CREATE</string>
     <string name="button_login">LOGIN</string>
@@ -12,7 +12,7 @@
     <string name="hint_password">Password</string>
     <string name="hint_receiver">Usernames</string>
     <string name="hint_message">…</string>
-    <string name="alert_delete_user">Delete this user?</string>
+    <string name="alert_delete_user">Do you want to delete your user account?</string>
     <string name="alert_logout">Do you want to log out?</string>
     <string name="pref_app_title">APP SETTINGS</string>
     <string name="pref_app_default_box">Default Box</string>
